Update rental UI with Flatpickr and fix API urls

--- a/admin/index.html
+++ b/admin/index.html
@@ -922,7 +922,8 @@
             // console.error(msg, url, line);
             // alert('Error: ' + msg + ' at ' + line);
         };
-        const API_BASE_URL = 'https://booking-ub69.onrender.com/api';
+        // const API_BASE_URL = 'https://booking-ub69.onrender.com/api';
+        const API_BASE_URL = '/api'; // Relative path for local/prod compatibility
 
         const DEV_AUTH_DISABLED = false; // Toggle to true to disable admin authentication (development only)
         function isAuthDisabled() { return DEV_AUTH_DISABLED; }
