--- a/frontend/class-schedule.html
+++ b/frontend/class-schedule.html
@@ -649,7 +649,8 @@
         </div>
     </div>
     <script>
-        const API_BASE_URL = 'https://booking-ub69.onrender.com/api';
+        // const API_BASE_URL = 'https://booking-ub69.onrender.com/api'; // OLD
+        const API_BASE_URL = '/api'; // Relative path for local/prod compatibility
 
         const state = {
 
