Fix admin initialization, rental syntax, and add hot tags/toasts

--- a/admin/index.html
+++ b/admin/index.html
@@ -925,7 +925,7 @@
         // const API_BASE_URL = 'https://booking-ub69.onrender.com/api';
         const API_BASE_URL = '/api'; // Relative path for local/prod compatibility
 
-        const DEV_AUTH_DISABLED = false; // Toggle to true to disable admin authentication (development only)
+        const DEV_AUTH_DISABLED = true; // Toggle to true to disable admin authentication (development only)
         function isAuthDisabled() { return DEV_AUTH_DISABLED; }
 
 
