--- a/admin/index.html
+++ b/admin/index.html
@@ -471,8 +471,20 @@
         }
 
         /* Modal - Reuse logic */
+        /* Modal - Reuse logic */
         #loginModal {
+            position: fixed;
+            inset: 0;
+            z-index: 9999;
+            background: rgba(15, 23, 42, 0.9);
             backdrop-filter: blur(8px);
+            display: none;
+            align-items: center;
+            justify-content: center;
+        }
+
+        #loginModal.active {
+            display: flex !important;
         }
 
         /* Role Based UI */
@@ -796,8 +808,7 @@
         </div>
 
         <!-- Login Modal -->
-        <div id="loginModal"
-            style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); z-index:1000; align-items:center; justify-content:center;">
+        <div id="loginModal">
             <div
                 style="background:#fff; padding:32px; border-radius:16px; width:100%; max-width:400px; box-shadow:0 24px 50px rgba(0,0,0,0.2);">
                 <h2 style="color:#0b4f6c; margin-bottom:24px; text-align:center;">管理員登入</h2>
@@ -1480,7 +1491,9 @@
                     localStorage.setItem('adminRole', result.role || 'super_admin');
                     localStorage.setItem('adminUsername', result.username || username);
 
-                    document.getElementById('loginModal').style.display = 'none';
+                    const loginModal = document.getElementById('loginModal');
+                    if (loginModal) loginModal.classList.remove('active');
+
                     document.getElementById('adminContainer').style.display = 'block';
 
                     if (typeof loadDashboardData === 'function') {
@@ -1494,31 +1507,6 @@
                 console.error('Login error:', error);
                 errorEl.textContent = '登入連線失敗';
                 errorEl.style.display = 'block';
-            }
-        }
-
-        function checkAuthentication() {
-            if (isAuthDisabled()) {
-                initializeAdminPanel();
-                return;
-            }
-
-            const token = localStorage.getItem('adminToken');
-            if (!token) {
-                showLoginModal();
-            } else {
-                // Verify token validity by calling a protected endpoint (e.g., stats)
-                authenticatedFetch(`${API_BASE_URL}/stats`)
-                    .then(response => {
-                        if (response.status === 401) {
-                            throw new Error('Token expired');
-                        }
-                        return response.json();
-                    })
-                    .then(() => initializeAdminPanel())
-                    .catch(() => {
-                        logout();
-                    });
             }
         }
 
@@ -1713,13 +1701,13 @@
             // 1. Check for Token
             if (!token) {
                 console.log('No token found. Showing login.');
-                if (loginModal) loginModal.style.display = 'flex';
+                if (loginModal) loginModal.classList.add('active');
                 if (adminContainer) adminContainer.style.display = 'none';
                 return; // STOP execution
             }
 
             // 2. Token exists -> Show Dashboard
-            if (loginModal) loginModal.style.display = 'none';
+            if (loginModal) loginModal.classList.remove('active');
             if (adminContainer) {
                 adminContainer.style.display = 'block';
 
